# telegram-serverless-bot-firebase

./: .env.example  README.md  firebase.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/api/v1/: __init__.py
app/config/: __init__.py
app/repositories/firebase/: config.py
app/repositories/telegram/: config.py
app/utils/: __init__.py
